# SharkBot-v2

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  DevHelp.md  README.md  api.py  boot_bot.py  bot.py  pyproject.toml  requirements.txt  run_windows.bat  sdk_social.md  test_bot.py
Graph/: Dockerfile  build.sh  main.py  run.sh
aimod/: main.py  (+1 more)
src/: api.py  bot.py  ecosystem.config.js  pyproject.toml  reload.sh  requirements.txt  test_bot.py
src/Graph/: Dockerfile  kill.sh  main.py
src/api/: api.py  ecosystem.config.js  run.sh
src/api/Templates/: docs.html
src/api/client/: sharkapi.py
src/api/core/: database.py
src/api/models/: account.py  api.py  bot.py  economy.py  search.py
src/api/routers/: account.py  api.py  bot.py  economy.py  search.py  sgc.py  topgg.py
src/api/test/: bot.py  sharkapi.py
src/cogs/: account.py  achievement.py  admin.py  aichat.py  alert.py  animal.py  announce.py  auto_reaction.py  auto_reset.py  autodown.py  autogg.py  autogif.py  automation.py  automation_v2.py  automod.py  autoreply.py  autotext.py  batch.py  bot.py  bot_log.py  channel.py  container.py  context.py  dm.py  eew.py  emojis.py  error_handle.py  expand.py  free_channel.py  fun.py  game.py  giveaway.py  global.py  group.py  help.py  invite.py  level.py  listing.py  lock_message.py  logging.py  (+28 more)
src/cogs/autotext/: autotext.py
src/cogs/prefixs/: admin.py  bot.py  error_handle.py  help.py  mod.py  panel.py
src/colorbot/: docker-compose.yml
src/colorbot/bot/: bot.py
src/colorbot/bot/cogs/: admin.py  batch.py  bot.py  help.py  lock_message.py  settings.py  tools.py  tts.py
src/colorbot/bot/models/: help_views.py
src/consts/: badword.sample
src/dashboard/: Readme.md
src/dashboard/dashboard/: ecosystem.config.js  package-lock.json  package.json  reload.sh
src/dashboard/dashboard/app/: layout.tsx
src/dashboard/dashboard/app/api/apps/roleplay/[clientid]/: route.ts
src/dashboard/dashboard/app/api/auth/callback/: route.ts
src/dashboard/dashboard/app/api/auth/login/: route.ts
src/dashboard/dashboard/app/api/auth/logout/: route.ts
src/dashboard/dashboard/app/api/topgg/[guildid]/: route.ts
src/dashboard/dashboard/app/components/: ClientLayout.tsx  ColorPicker.tsx  EmojiToggle.tsx  ItemBox.tsx  LineAndTextLayout.tsx  ModuleToggle.tsx  ToastProvider.tsx  UserInstallLayout.tsx
src/dashboard/dashboard/app/dashboard/: page.tsx
src/dashboard/dashboard/app/dashboard/rankcard/: RankCardBuilder.tsx  page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/: layout.tsx  page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/achievement/: page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/alert/: page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/auth/: page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/automation/: Builder.tsx  page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/automod/: page.tsx
src/dashboard/dashboard/app/dashboard/settings/[guildid]/autoreply/: page.tsx
src/dashboard/dashboard/app/servers/: page.tsx
src/dashboard/dashboard/app/servers/[guildid]/: page.tsx
src/dashboard/dashboard/app/vc/: page.tsx
src/hiroyuki/: main.py
src/js-server/: Dockerfile  package.json
src/models/: akinator.py  block.py  bot_ban.py  cmdcount.py  command_disable.py  context.py  cooldown.py  custom_tree.py  globalchat.py  help_views.py  hook.py  is_ban.py  make_embed.py  markov.py  miq.py  modules.py  pages.py  permissions_text.py  raw_error.py  save_commands.py  string_id.py  web_translate.py
src/music/: ecosystem.config.js  main.py  run.sh
src/router/: settings.py
src/short/: ecosystem.config.js  main.py  run.sh
src/short/templates/: index.html  info.html
src/sites/: ecosystem.config.js  main.py
src/sites/Templates/: auth_error.html  commands.html  index.html  index_2.html  index_3.html  loading.html  login.html  register.html  sites.html
src/status/: index.html
src/templates/: automod.html  autoreply.html  guilds.html  level.html  lock_message.html  logging_setting.html  main_settings.html  make_embed.html  message.html  pastebin.html
src/youtube/: ecosystem.config.js  main.py  mongo.py
(+274 files in other folders)
