[project]
name = "sharkbot-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "autopep8>=2.3.2",
    "beautifulsoup4==4.13.5",
    "blinker==1.9.0",
    "braceexpand==0.1.7",
    "bs4==0.0.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "deep-translator==1.11.4",
    "deprecated==1.2.18",
    "discord==2.3.2",
    "discord-py==2.6.2",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "fastapi==0.116.1",
    "flake8>=7.3.0",
    "flask==3.1.2",
    "fonttools==4.59.2",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "import-expression==2.2.1.post1",
    "itsdangerous==2.2.0",
    "jaconv==0.4.0",
    "jinja2==3.1.6",
    "jishaku==2.6.0",
    "kiwisolver==1.4.9",
    "limits==5.5.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.5",
    "motor==3.7.1",
    "multidict==6.6.4",
    "numpy==2.3.2",
    "packaging==25.0",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pykakasi==2.3.0",
    "pymongo==4.14.1",
    "pynacl==1.5.0",
    "pyparsing==3.2.3",
    "pyshorteners==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "requests==2.32.5",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.47.3",
    "tabulate==0.9.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.2",
    "unbelievaboat==2.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.3",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
