[project]
name = "sharkbot-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "autopep8>=2.3.2",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "braceexpand==0.1.7",
    "bs4==0.0.2",
    "certifi==2026.1.4",
    "cffi==1.17.1",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "contourpy==1.3.3",
    "cryptography==45.0.7",
    "cycler==0.12.1",
    "deep-translator==1.11.4",
    "deprecated==1.3.1",
    "discord==2.3.2",
    "discord-py==2.6.4",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "fastapi==0.128.0",
    "flake8>=7.3.0",
    "flask==3.1.2",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "import-expression==2.2.1.post1",
    "itsdangerous==2.2.0",
    "jaconv==0.4.1",
    "jinja2==3.1.6",
    "jishaku==2.6.3",
    "kiwisolver==1.4.9",
    "limits==5.6.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "motor==3.7.1",
    "multidict==6.7.0",
    "numpy==2.4.1",
    "packaging==25.0",
    "pillow==11.3.0",
    "propcache==0.4.1",
    "pycparser==3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pykakasi==2.3.0",
    "pymongo==4.16.0",
    "pynacl==1.5.0",
    "pyparsing==3.3.2",
    "pyshorteners==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "requests==2.32.5",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "starlette==0.47.3",
    "tabulate==0.9.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.2",
    "unbelievaboat==2.2.0",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "werkzeug==3.1.5",
    "wrapt==1.17.3",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
